# internal/api/batch/routes.go
@@ -9,6 +9,8 @@ func RegisterRoutes(protected *gin.RouterGroup, deps *ServerDependencies) {
 	protected.DELETE("/batch/:id", deleteBatchJob(deps))
 	protected.POST("/batch/:id/cancel", cancelBatchJob(deps))
 	protected.PATCH("/batch/:id/movies/:movieId", updateBatchMovie(deps))
+	protected.POST("/batch/:id/movies/batch-exclude", batchExcludeMovies(deps))
+	protected.POST("/batch/:id/movies/batch-rescrape", batchRescrapeMovies(deps))
 	protected.POST("/batch/:id/movies/:movieId/poster-crop", updateBatchMoviePosterCrop(deps))
 	protected.POST("/batch/:id/movies/:movieId/poster-from-url", updateBatchMoviePosterFromURL(deps))
 	protected.POST("/batch/:id/movies/:movieId/exclude", excludeBatchMovie(deps))
